@@ -2,6 +2,8 @@
 
 	* ipmi-pet/ipmi-pet-argp.c: Fix argp output, ipmi-pet does not
 	take hostranged arguments.
+
+	* common/toolcommon/tool-cmdline-common.h: Code cleanup.
 	
 2012-05-25  Albert Chu <chu11@llnl.gov>
 
